--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,10 @@ jobs:
         password: ${{ secrets.MAIN_PWD }}
         port: ${{ secrets.MAIN_PORT }}
         script: |
-         ls
+          docker stop test_flask || true && docker rm test_flask || true
+          docker login -u ${{ secrets.DOCKER_HUB_LOGIN }} -p ${{ secrets.DOCKER_HUB_PWD }}
+          docker pull ${{ secrets.DOCKER_HUB_LOGIN }}/tst:test_image
+          docker run --name test_flask -d -p 5000:5000 ${{ secrets.DOCKER_HUB_LOGIN }}/tst:test_image
     
 
 
