--- a/my_test/requirements.txt
+++ b/my_test/requirements.txt
@@ -7,3 +7,7 @@ Werkzeug==1.0.1
 pandas==1.2.3
 numpy==1.19.5
 requests==2.25.1
+tensorflow==2.5.0rc0
+Keras==2.4.3
+sklearn==0.0
+scikit-learn==0.24.1
